# InvertedIndexing

./: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp  app.h  handler.h  main.cpp  ui.h
src/structures/: CMakeLists.txt  array_list.h  bin_linkedlist_tree.h  kd_tree.h  linked_list.h  linked_stack.h
